# kvcrucible

./: .gitignore  Cargo.toml  README.md  rust-toolchain.toml
.github/workflows/: ci.yml
docs/: charter.md  compatibility.md  threat-model.md
examples/: delivered_fold.rs  fault_materialization.rs
spec/: ir-v1.md  semantics.md
src/: codec.rs  fingerprint.rs  ir.rs  jsonl.rs  lib.rs  limits.rs  main.rs  scenario.rs  state.rs  trace.rs
src/state/: tests.rs
tests/: contract_cli.rs
tests/fixtures/codec/: envelope.canonical.jsonl  envelope.noncanonical.jsonl
