[package]
name = "kvcrucible"
version = "0.1.0-alpha.1"
edition = "2024"
rust-version = "1.97"
authors = ["Omar Ibrahim"]
description = "Offline conformance lab for unreliable LLM KV-cache event streams"
license = "Apache-2.0"
repository = "https://github.com/omar07ibrahim/kvcrucible"
readme = "README.md"
keywords = ["llm", "inference", "kv-cache", "model-checking"]
categories = ["command-line-utilities", "development-tools::testing"]
publish = false

[dependencies]
base64 = "0.22"
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_json_canonicalizer = "=0.3.2"
sha2 = { version = "=0.11.0", default-features = false }
thiserror = "2.0"

[dev-dependencies]
proptest = { version = "1.11", default-features = false, features = ["std"] }

[profile.release]
codegen-units = 1
lto = "thin"
strip = "symbols"

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
all = { level = "deny", priority = -1 }
pedantic = { level = "deny", priority = -1 }
